--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,13 +1,19 @@
-@article{Maxwell1865,
-	doi = {10.1098/rstl.1865.0008},
-	url = {https://doi.org/10.1098%2Frstl.1865.0008},
-	year = 1865,
-	month = {jan},
-	publisher = {The Royal Society},
-	volume = {155},
-	number = {0},
-	pages = {459--512},
-	author = {J. C. Maxwell},
-	title = {A Dynamical Theory of the Electromagnetic Field},
-	journal = {Philosophical Transactions of the Royal Society of London}
+@article{mastrandrea2015contact,
+  title={Contact patterns in a high school: a comparison between data collected using wearable sensors, contact diaries and friendship surveys},
+  author={Mastrandrea, Rossana and Fournet, Julie and Barrat, Alain},
+  journal={PloS one},
+  volume={10},
+  number={9},
+  pages={e0136497},
+  year={2015},
+  publisher={Public Library of Science}
 }
+@article{rosvall2014memory,
+  title={Memory in network flows and its effects on spreading dynamics and community detection},
+  author={Rosvall, Martin and Esquivel, Alcides V and Lancichinetti, Andrea and West, Jevin D and Lambiotte, Renaud},
+  journal={Nature communications},
+  volume={5},
+  year={2014},
+  publisher={Nature Research}
+}
+
