--- a/frontbackmatter/abstract.tex
+++ b/frontbackmatter/abstract.tex
@@ -1,16 +1,15 @@
 %*******************************************************
 % Abstract
 %*******************************************************
-%\renewcommand{\abstractname}{Abstract}
+\renewcommand{\abstractname}{Abstract}
 \pdfbookmark[1]{Abstract}{Abstract}
 \begingroup
 \let\clearpage\relax
 \let\cleardoublepage\relax
 \let\cleardoublepage\relax
-
 \chapter*{Abstract}
 
-English abstract here.
+This is a thesis that does a lot of science.
 
 \endgroup
 
@@ -21,14 +20,7 @@ English abstract here.
 \let\cleardoublepage\relax
 \let\cleardoublepage\relax
 
-\begin{otherlanguage}{ngerman}
-\pdfbookmark[1]{Zusammenfassung}{Zusammenfassung}
-\chapter*{Zusammenfassung}
-
-Deutsche Zusammenfassung hier.
-
-\end{otherlanguage}
-
 \endgroup
 
 \vfill
+
