--- a/preamble/meta.tex
+++ b/preamble/meta.tex
@@ -2,20 +2,20 @@
 % Document information
 %
 \newcommand{\myTitle}{%
-  Eine neue Bestimmung der Moleküldimensionen\xspace%
+  Generic Thesis Title\xspace%
 }
 \newcommand{\myPlainTitle}{%
-  Eine neue Bestimmung der Moleküldimensionen\xspace%
+  Generic Thesis Title\xspace%
 }
 
 \newcommand{\myDissNumber}{?}
-\newcommand{\myName}{Albert Einstein\xspace}
+\newcommand{\myName}{Smart Ass\xspace}
 \newcommand{\myUni}{\protect{ETH Z\"urich}\xspace}
 \newcommand{\myLocation}{Z\"urich\xspace}
-\newcommand{\myTime}{1905\xspace}
+\newcommand{\myTime}{2017\xspace}
 
 % DOI
-\newcommand{\myDOI}{10.3929/ethz-a-}
+%\newcommand{\myDOI}{10.3929/ethz-a-}
 
 % Work version info
 \newcommand{\worktodo}[1]{\textcolor{red}{\textbf{TODO}: #1}}
