--- a/preamble/general.tex
+++ b/preamble/general.tex
@@ -7,16 +7,17 @@
 % classicthesis setup
 \PassOptionsToPackage{%
   %drafting,%
-  %dottedtoc,%
-  eulerchapternumbers,
-  %listings,%
+  dottedtoc,%
+  eulerchapternumbers,%
+  listings,%
   %parts,%
+  linedheaders,%
   floatperchapter, pdfspacing,%
   beramono,%
   %minionprospacing,
   %subfig,%
   %eulermath,%
-  a5paper,%
+  %a5paper,%
 }{classicthesis}
 
 % Meta
@@ -39,9 +40,58 @@
 \usepackage{csquotes}  % smart quotes
 \usepackage[T1]{fontenc}
 \usepackage{xspace}
-\usepackage{textcomp}
+\usepackage[warn]{textcomp}
 \usepackage{mparhack}
 \usepackage{relsize}
+\usepackage{amsmath}
+\usepackage{mathtools}
+%\usepackage{algorithm}
+%\usepackage{algpseudocode}
+
+% Code formatting
+\usepackage[T1]{fontenc}
+\usepackage{listings}
+
+% macro to select a scaled-down version of Bera Mono
+\makeatletter
+\newcommand\BeraMonottfamily{%
+  \def\fvm@Scale{0.85}% scales the font down
+  \fontfamily{fvm}\selectfont% selects the Bera Mono font
+}
+\makeatother
+
+% Define personal BeraMonott font environment
+% for inline code because inline listing is a pain
+%\newenvironment{myfont}{\fontfamily{\BeraMonottfamily}\selectfont}{\par}
+%\DeclareTextFontCommand{\textmyfont}{\myfont}
+
+\lstset{ %
+  backgroundcolor=\color{RawSienna!5},   % choose the background color; you must add \usepackage{color} or \usepackage{xcolor}; should come as last argument
+  basicstyle=\BeraMonottfamily,        % the size of the fonts that are used for the code
+  breakatwhitespace=false,         % sets if automatic breaks should only happen at whitespace
+  breaklines=true,                 % sets automatic line breaking
+  captionpos=b,                    % sets the caption-position to bottom
+  commentstyle=\color{Green},    % comment style
+  deletekeywords={...},            % if you want to delete keywords from the given language
+  escapeinside={(*}{*)},          % if you want to add LaTeX within your code
+  extendedchars=true,              % lets you use non-ASCII characters; for 8-bits encodings only, does not work with UTF-8
+  frame=none,	                   % adds a frame around the code
+  keepspaces=true,                 % keeps spaces in text, useful for keeping indentation of code (possibly needs columns=flexible)
+  keywordstyle=\color{Purple},       % keyword style
+  language=Python,                 % the language of the code
+  morekeywords={*,...},            % if you want to add more keywords to the set
+  numbers=left,                    % where to put the line-numbers; possible values are (none, left, right)
+  numbersep=5pt,                   % how far the line-numbers are from the code
+  numberstyle=\color{Maroon}, % the style that is used for the line-numbers
+  rulecolor=\color{black},         % if not set, the frame-color may be changed on line-breaks within not-black text (e.g. comments (green here))
+  showspaces=false,                % show spaces everywhere adding particular underscores; it overrides 'showstringspaces'
+  showstringspaces=false,          % underline spaces within strings only
+  showtabs=false,                  % show tabs within strings adding particular underscores
+  stepnumber=1,                    % the step between two line-numbers. If it's 1, each line will be numbered
+  stringstyle=\color{Maroon},     % string literal style
+  tabsize=4,	                   % sets default tabsize to 2 spaces
+%  title=\lstname                   % show the filename of files included with \lstinputlisting; also try caption instead of title
+}
 
 % Biblatex
 \input{preamble/biblatex}
@@ -59,6 +109,7 @@
 
 % Figures, tables, and captions
 \usepackage{tabularx}
+\usepackage{multirow}
 \usepackage{ltablex}
 \setlength{\extrarowheight}{3pt}
 \newcommand{\tableheadline}[1]{\multicolumn{1}{c}{\spacedlowsmallcaps{#1}}}
@@ -70,7 +121,7 @@
 \captionsetup[sub]{margin=0pt,font=small,labelfont={rm}}
 
 % Blind text
-\usepackage{blindtext}
+%\usepackage{blindtext}
 
 % Hyperref
 \usepackage[dvipsnames]{xcolor}
@@ -85,7 +136,7 @@
 \hypersetup{%
   %pdfstartpage=3, pdfstartview=FitV,%
   % following line: colored links (web version)
-  colorlinks=true, linktocpage=true,%
+  colorlinks=true, linktoc=all,%linktocpage=true,%
   % following line: all links in black (for printing)
   %colorlinks=false, linktocpage=false, pdfborder={0 0 0},%
   breaklinks=true, pdfpagemode=UseNone, pageanchor=true, pdfpagemode=UseOutlines,%
@@ -142,11 +193,16 @@
 
 % Customize text width and length
 
-\KOMAoptions{headinclude=true,footinclude=false}
+\KOMAoptions{headinclude=true,footinclude=false,fontsize=11pt}
 %\setlength{\textwidth}{10.5cm} % 9 pt font
-\setlength{\textwidth}{11.6cm} % 10 pt font
+%\setlength{\textwidth}{11.6cm} % 10 pt font
+\setlength{\textwidth}{16cm} % 12 pt font
 % text height set by golden ratio
-\areaset[current]{\textwidth}{1.618034\textwidth}
+%\areaset[current]{\textwidth}{1.618034\textwidth}
+
+\setlength{\marginparwidth}{0pt}
+\setlength{\marginparsep}{0pt}
+\areaset[current]{\dimexpr\textwidth+\marginparwidth+\marginparsep}{\textheight}
 
 % Page numbers in plain style (chapter titles)
 \clearscrplain
@@ -173,6 +229,12 @@
 \definecolor{chapter-color}{cmyk}{1, 0.50, 0, 0.25}
 \definecolor{link-color}{cmyk}{1, 0.50, 0, 0.25}
 \definecolor{cite-color}{cmyk}{0, 0.7, 0.9, 0.2}
+
+\usepackage{soul}
+\newcommand{\hlc}[2][yellow]{{%
+    \colorlet{foo}{#1}%
+    \sethlcolor{foo}\hl{#2}}%
+}
 
 % Hyperref
 \usepackage{bookmark}
@@ -225,7 +287,7 @@
 % Adapted from: <http://tex.stackexchange.com/questions/53377/inspirational-quote-at-start-of-chapter>
 \setkomafont{dictumtext}{\itshape\small}%
 \setkomafont{dictumauthor}{\normalfont}
-\renewcommand*{\dictumwidth}{0.6\textwidth}
+\renewcommand*{\dictumwidth}{0.5\textwidth}
 \renewcommand*{\dictumrule}{}
 \renewcommand*\dictumauthorformat[1]{--- #1}
 
